[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoundcard"
dynamic = ["version"]
authors = [
    {name = "Ronny Andersson", email = "ronny@andersson.tk"},
]
description = "Using the pyaudio and zignal libraries to play audio on a soundcard"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyaudio",
    "zignal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = [
    "audio", "sound", "card", "soundcard", "pyaudio", "portaudio", "playback",
    "recording",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
]

[project.urls]
Homepage = "https://github.com/ronnyandersson/zoundcard"
Issues = "https://github.com/ronnyandersson/zoundcard/issues"
Download = "https://pypi.python.org/pypi/zoundcard"

[project.scripts]
zoundcard-list = "zoundcard:list_devices"

[tool.hatch.version]
path = "src/zoundcard/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "*.code-workspace",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "src/tests/",
    "src/examples/",
]
